# LLM-based_automatic_dataset_labeling_with_quality_estimation

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
scripts/: evaluate.py  generate_pseudo_labels.py  prepare_data.py  train_models.py  visualize.py
src/: config.py  data.py  ensemble.py  hf_models.py  llm_labeler.py  metrics.py  prompts.py  tfidf_baseline.py  utils.py
src/ldlqe/: __init__.py  config.py  data.py  evaluation.py  io_utils.py  labelers.py  quality.py  training.py  visualization.py
